Fix scrollable x on mobile view

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+}
+
 body {
     background-color: black;
 }
@@ -38,16 +42,6 @@ main {
   box-shadow: 2px 5px 20px rgba(119, 119, 119, 0.5);
   border: 1px solid antiquewhite;
   border-radius: 15px;
-}
-
-.leftbox {
-  top: -5%;
-  left: 5%;
-  position: absolute;
-  width: 15%;
-  height: 110%;
-  background-color: #50d890;
-  box-shadow: 3px 3px 15px rgba(119, 119, 119, 0.5);
 }
 
 .rightbox {
@@ -109,41 +103,6 @@ ul.rb li .timestamp {
 
 .item-title {
   color: #fff;
-}
-
-.container-3 {
-  width: 5em;
-  vertical-align: right;
-  white-space: nowrap;
-  position: absolute;
-}
-
-.container-3 input#search {
-  width: 150px;
-  height: 30px;
-  background: #fbfbfb;
-  border: none;
-  font-size: 10pt;
-  color: #262626;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  margin: 0.9em 0 0 28.5em;
-  box-shadow: 3px 3px 15px rgba(119, 119, 119, 0.5);
-}
-
-.container-3 .icon {
-  margin: 1.3em 3em 0 31.5em;
-  position: absolute;
-  width: 150px;
-  height: 30px;
-  z-index: 1;
-  color: #4f5b66;
-}
-
-input::placeholder {
-  padding: 5em 5em 1em 1em;
-  color: #50d890;
 }
 
 h3 {
